@@ -187,12 +187,17 @@
 
 
     <h1>Assert-FirewallConfigurable</h1>
-    <div><p>Assert-FirewallConfigurable </p>
+    <div><p>Asserts that the Windows firewall is configurable and writes an error if it isn't.</p>
 </div>
 
+        <h2>Syntax</h2>
+    <pre class="Syntax"><code>Assert-FirewallConfigurable [&lt;CommonParameters&gt;]</code></pre>
     
-    
-    
+        <h2>Description</h2>
+    <div class="Description">
+        <p>The Windows firewall can only be configured if it is running.  This function checks test if it is running.  If it isn't, it writes out an error and returns <code>False</code>.  If it is running, it returns <code>True</code>.</p>
+
+    </div>
     
     
 
@@ -200,10 +205,15 @@
         
     
         
-    
+            <h2>Return Values</h2>
+        <p><a href="http://msdn.microsoft.com/en-us/library/system.boolean.aspx">System.Boolean</a>. </p>
+
         
     
         
-    
+                <h2>EXAMPLE 1</h2>
+            <pre><code>Assert-FirewallConfigurable</code></pre>
+            <p><p>Returns <code>True</code> if the Windows firewall can be configured, <code>False</code> if it can't.</p>
+</p><p></p><p></p><p></p><p></p>
 </body>
 </html>   
